--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 header {
     position: relative;
     background: #333;
-    color: #fff;
+    color: #fff9f9;
     padding: 20px 0;
     text-align: center;
 }
@@ -43,14 +43,14 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #8d0f0f;
     text-decoration: none;
     font-size: 18px;
 }
 
 .hero {
     padding: 80px 20px 40px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(214, 188, 211, 0.877);
 }
 
 .profile-image {
@@ -115,7 +115,7 @@ form input, form textarea {
 
 form button {
     background: #333;
-    color: #fff;
+    color: #423636;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
